--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
+    "react-scroll-parallax": "^3.4.2",
     "tailwindcss": "3.3.3"
   }
 }
