--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
+    "next-image-export-optimizer": "^1.8.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-scroll": "^1.8.9",
     "react-scroll-parallax": "^3.4.2",
     "tailwindcss": "3.3.3"
