--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "fs": "^0.0.1-security",
     "next": "13.5.2",
     "next-image-export-optimizer": "^1.8.5",
     "postcss": "8.4.30",
