printing metadata from md files

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
-    "fs": "^0.0.1-security",
-    "next": "13.5.2",
+    "gray-matter": "^4.0.3",
+    "next": "^13.3.4",
     "next-image-export-optimizer": "^1.8.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
