--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "https-dev":"next dev --experimental-https"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
